--- a/Portfolio Template/index.html
+++ b/Portfolio Template/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rohit Shinde-Web Developer,Programmer,ML Enthusiast</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
@@ -19,10 +19,10 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="/intro.html">My Intro</a></li>
-                <li><a href="/service.html">Service</a></li>
-                <li><a href="/blog.html">Blog</a></li>
-                <li><a href="/contact.html">Contact Me</a></li>
+                <li><a href="pages/intro.html">My Intro</a></li>
+                <li><a href="pages/service.html">Service</a></li>
+                <li><a href="pages/blog.html">Blog</a></li>
+                <li><a href="pages/contact.html">Contact Me</a></li>
             </ul>
         </nav>
     </div>
@@ -38,12 +38,12 @@
                 <div class="about">Software Developer,Entreprenuer</div>
                 <div class="moreAbout">I am a Developer, and I love to drink coffee.</div>
                 <div class="buttons">
-                    <a href="Rohitresume.pdf" target="_blank"><button class="btn">Download CV</button></a>
-                    <a href="/contact.html"><button class="btn">Contact Me</button></a>
+                    <a href="pages/Rohitresume.pdf" target="_blank"><button class="btn">Download CV</button></a>
+                    <a href="pages/contact.html"><button class="btn">Contact Me</button></a>
                 </div>
             </div>
             <div class="devPic">
-                <img src="devPic.png" alt="Developer Png">
+                <img src="images/devPic.png" alt="Developer Png">
             </div>
         </div>
     </div>
