--- a/Portfolio Template/pages/contact.html
+++ b/Portfolio Template/pages/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rohit Shinde-Web Developer,Programmer,ML Enthusiast</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
@@ -18,11 +18,11 @@
     <div class="sidebar">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="/intro.html">My Intro</a></li>
-                <li><a href="/service.html">Service</a></li>
-                <li><a href="/blog.html">Blog</a></li>
-                <li><a href="/contact.html">Contact Me</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="/pages/intro.html">My Intro</a></li>
+                <li><a href="#">Service</a></li>
+                <li><a href="/pages/blog.html">Blog</a></li>
+                <li><a href="/pages/contact.html">Contact Me</a></li>
             </ul>
         </nav>
     </div>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="clientEnquiry" class="form-label">Enquiry</label>
-                    <input type="email" class="form-control" id="clientEmail" aria-describedby="emailHelp">
+                    <input type="text" class="form-control" id="clientEnquiry" aria-describedby="Enquiry">
                 </div>
                 <div class="mb-3" id="form-check">
                   <input type="checkbox" class="form-check-input" id="isClient">
