--- a/pages/blog.html
+++ b/pages/blog.html
@@ -19,10 +19,10 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="intro.html">My Intro</a></li>
-                <li><a href="service.html">Service</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
+                <li><a href="/pages/intro.html">My Intro</a></li>
+                <li><a href="/pages/service.html">Service</a></li>
+                <li><a href="/pages/blog.html">Blog</a></li>
+                <li><a href="/pages/contact.html">Contact Me</a></li>
             </ul>
         </nav>
     </div>
